--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: MetaHacks
-subtitle: 一生二，二生三，三生万物
+subtitle: bigdata, cloud-edge intelligence, distributed system, cloud computing
 description: coding for mind, machine, human
 author: Kinny
 language: zh-Hans
