--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -63,10 +63,10 @@ menu_icons:
   commonweal: heartbeat
 
 
-sitemap: 
-    path: sitemap.xml
-baidusitemap:
-    path: baidusitemap.xml
+# sitemap: 
+#     path: sitemap.xml
+# baidusitemap:
+#     path: baidusitemap.xml
 
 # ---------------------------------------------------------------
 # Scheme Settings
@@ -448,10 +448,10 @@ canvas_nest: false
 three_waves: false
 
 # canvas_lines
-canvas_lines: false
+canvas_lines: true
 
 # canvas_sphere
-canvas_sphere: true
+canvas_sphere: false
 
 # Only fit scheme Pisces
 # Canvas-ribbon
